# Rewrite

./: .gitignore  CMakeLists.txt
src/: main.cpp
src/Core/: Types.h
src/EditorCore/: Caret.cpp  Caret.h  CustomAssert.h  Editor.cpp  Editor.h  HelperFunctions.h  TextBuffer.cpp  TextBuffer.h
tests/: CMakeLists.txt  main.cpp
tests/EditorCore/: CaretTest.cpp  TextBufferTest.cpp
